# project2_amelyakin_dpo_nod

./: Makefile  README.md  pyproject.toml
src/primitive_db/: main.py
